# inert-bot

./: .dockerignore  .env  .gitignore  .gitmodules  DEVELOPMENT.md  Dockerfile  MANIFEST.in  README.md  TESTING.md  default.env  docker-compose.yml  mysql-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: codeql-analysis.yml  dev-image.yml  main-image.yml  tests.yml
libs/: README.md
src/discord_bot/: SqlHandler.py  __main__.py  main.py  settings.py  sqlHandler.py
src/discord_bot/commands/admin/: __init__.py  ban.py  kick.py  moderation.py  role.py  setprefix.py  utilities.py
src/discord_bot/commands/exp/: __init__.py  levels.py
src/discord_bot/commands/fun/: __init__.py  bottom.py  hug.py  urbandictionary.py  uwu.py  xkcd.py
src/discord_bot/commands/misc/: __init__.py  help.py  pfp.py  ping.py  recolor.py
src/discord_bot/commands/poll/: __init__.py  anonpoll.py  poll.py
src/discord_bot/cpp_functions/: main.cpp
src/discord_bot/migrations/: v0.schema  v0.sql
src/discord_bot/sql/: prefix.py  role.py  sql.py
tests/: README.md  conftest.py  test_fun.py  test_misc.py  test_moderation.py  test_ping.py  test_role.py
