[metadata]
name = discord_bot
description = General Discord bot written in python using discord.py
author = Ferdinand Theil
license = GPL-3.0 Licence
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    discord_bot
install_requires =
    aiohttp>=3.7.4
    APScheduler>=3.7.0
    async-timeout>=3.0.1
    attrs>=20.3.0
    certifi>=2020.12.5
    chardet>=4.0.0
    cppimport>=21.3.7
    discord.py>=1.7.1
    gitdb>=4.0.7
    GitPython>=3.1.14
    idna>=2.10
    Mako>=1.1.4
    MarkupSafe>=1.1.1
    multidict>=5.1.0
    Pillow>=8.3.2
    pybind11>=2.6.2
    pytz>=2021.1
    requests>=2.25.1
    six>=1.15.0
    smmap>=4.0.0
    typing-extensions>=3.7.4.3
    tzlocal>=2.1
    update-checker>=0.18.0
    urllib3>=1.26.5
    websocket-client>=0.58.0
    yarl>=1.6.3
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160