[metadata]
name = discord_bot
description = General Discord bot written in python using discord.py
author = Ferdinand Theil
license = GPL-3.0 Licence
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=find:
install_requires =
    discord.py>=1.7.3
    cppimport>=22.5.11
    Pillow>=9.1.1
    APScheduler>=3.9.1
    mysql-connector-python>=8.0.29
    # sqlAlchemy>=1.1.0
    python-dotenv>=0.20.0
    requests>=2.28.1
    urbandictionary>=1.1
    aiohttp>=3.7.4.post0
    
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest >= 6.2
    pytest-cov>=2.0
    pytest-mysql>=2.3
    pytest-env>=0.6.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    dpytest @ git+https://github.com/Blotz/dpytest.git@a3ee2958de1aa03fb4c3640ab3ca34742b73714d

[pytest]
env=
    SQL_PORT=3308
    SQL_DATABASE=datatables

[build_ext]
inplace=1

[flake8]
max-line-length = 160
